# hangman

./: CMakeLists.txt  README.md  game_logic.c  game_logic.h  words.txt
include/: client.h  game.h  globals.h  server.h
src/: client.c  server.c
src/client/: client.c  play_game.c  utils.c
src/server/: game_utils.c  globals.c  handle_client.c  load_words.c  server.c
